profile: fix overlapping with styles for top-area element

--- a/gitlab.user.styl
+++ b/gitlab.user.styl
@@ -2008,7 +2008,7 @@
   }
 
   // * Dashboard :: Top navigation.
-  .top-area {
+  .top-area:not(.cover-block) {
     margin-top: 10px;
     padding: 0 8px;
     radius: $radius;
